# templates

./: flake.nix
cmake/: CMakeLists.txt  flake.nix
markdown/: Makefile  flake.nix  frontmatter.md  main.md
maven/: README.md  flake.nix
python/: flake.nix
